...
      <Box marginX={-1}>
        <IconButton
          transparent
          accessibilityLabel="Search for component"
          name="search"
          onPress={onOpenSearch}
          testID="search-button"
        />
      </Box>
    ) : showBackButton ? (
      <Box marginX={-1}>
        <IconButton
          transparent
          accessibilityLabel="Go back"
          name="backArrow"
          onPress={onGoBack}
          testID="nav-back-button"
        />
      </Box>
    ) : (
      iconButtonPlaceholder
    );

...
