...
  return (
    <ExampleContext.Provider value={context}>
      <Box
        borderedTop
        background="bg"
        borderColor="bgLineHeavy"
        testID="mobile-playground-screen"
        {...boxProps}
      >
        <ScrollView
          ref={ref}
          contentContainerStyle={{
            flexGrow: 1,
...
