...
}: Pick<DrawerBaseProps, 'pin' | 'reduceMotion'>) => {
  const [isVisible, setIsVisible] = useState(false);
  const setIsVisibleOff = useCallback(() => setIsVisible(false), [setIsVisible]);
  const setIsVisibleOn = useCallback(() => setIsVisible(true), [setIsVisible]);
  return (
    <>
      <Button onPress={setIsVisibleOn}>Open</Button>
      {isVisible && (
        <Drawer onCloseComplete={setIsVisibleOff} pin={pin} reduceMotion={reduceMotion}>
          {({ handleClose }) => (
            <VStack padding={2}>
              <LoremIpsum />
              <Button onPress={handleClose} variant="secondary">
                Cancel
              </Button>
            </VStack>
          )}
        </Drawer>
      )}
    </>
...
