...
        <Box marginX={-1}>
          <IconButton
            transparent
            accessibilityLabel="Go back"
            name="backArrow"
            onPress={goBack}
            testID="nav-back-button"
          />
        </Box>
      ) : (
        iconButtonPlaceholder
      );

...
